--- a/src/main/resources/frontend/package.json
+++ b/src/main/resources/frontend/package.json
@@ -9,6 +9,12 @@
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+	"@types/webpack": "^5.28.0",
+    "sockjs-client": "^1.4.0",
+    "type-fest": "^0.13.1",
+    "webpack-hot-middleware": "^2.25.1",
+    "webpack-plugin-serve": "^1.5.0",
+    "bootstrap": "^5.1",
     "date-fns": "^2.28.0",
     "jquery": "^3.6.0",
     "react": "^17.0.2",
@@ -24,6 +30,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+  "proxy": "http://localhost:8081",
   "eslintConfig": {
     "extends": [
       "react-app",
