--- a/src/main/resources/frontend/package.json
+++ b/src/main/resources/frontend/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@date-io/date-fns": "^1.3.13",
+    "@fortawesome/fontawesome-svg-core": "^1.3.0",
     "@fortawesome/free-solid-svg-icons": "^6.0.0",
     "@fortawesome/react-fontawesome": "^0.1.17",
     "@material-ui/core": "^4.12.3",
@@ -11,11 +12,7 @@
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
-	"@types/webpack": "^5.28.0",
-    "sockjs-client": "^1.4.0",
-    "type-fest": "^0.13.1",
-    "webpack-hot-middleware": "^2.25.1",
-    "webpack-plugin-serve": "^1.5.0",
+    "@types/webpack": "^5.28.0",
     "bootstrap": "^5.1",
     "date-fns": "^2.28.0",
     "jquery": "^3.6.0",
@@ -25,8 +22,12 @@
     "react-router": "^6.2.1",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "sockjs-client": "^1.4.0",
     "styled-components": "^5.3.3",
-    "web-vitals": "^2.1.4"
+    "type-fest": "^0.13.1",
+    "web-vitals": "^2.1.4",
+    "webpack-hot-middleware": "^2.25.1",
+    "webpack-plugin-serve": "^1.5.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -55,7 +56,9 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.2",
+    "node-sass": "^7.0.1",
     "postcss": "^8.4.6",
+    "sass-loader": "^12.6.0",
     "tailwindcss": "^3.0.22"
   }
 }
