--- a/src/main/resources/frontend/package.json
+++ b/src/main/resources/frontend/package.json
@@ -11,7 +11,9 @@
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^0.26.0",
     "date-fns": "^2.28.0",
+    "framer-motion": "^6.2.8",
     "jquery": "^3.6.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -28,6 +30,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+    "proxy": "http://localhost:8081",
   "eslintConfig": {
     "extends": [
       "react-app",
